--- a/src/app/build-pc/build-pc.component.css
+++ b/src/app/build-pc/build-pc.component.css
@@ -225,14 +225,15 @@
 
 
 .add-cart-buttons .btn-add-cart {
-    width: 35%;
-    height: 35px;
-    background: #197bb7;;
+    width: 32%;
+    height: 32px;
+    background: #197bb7;
     border: none;
     font-weight: 700;
     font-size: 16px;
     color: #fff;
-    margin-top: 0px;
+    margin-left: 10px;
+    text-align: left;
     /* text-transform: uppercase */
 }
 
