--- a/src/app/build-pc/build-pc.component.html
+++ b/src/app/build-pc/build-pc.component.html
@@ -22,7 +22,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -37,7 +37,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -52,7 +52,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -67,7 +67,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -82,7 +82,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -97,7 +97,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -112,7 +112,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -127,7 +127,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -142,7 +142,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -157,7 +157,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -172,7 +172,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -187,7 +187,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -202,7 +202,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
@@ -217,7 +217,7 @@
         <td class="att-value">
           <div class="add-cart-buttons">
             <button type="button" (click)="showChooseProduct(1)" routerLinkActive="router-link-active"
-              class="btn-add-cart "><svg width="17" style="vertical-align: sub;" height="18" viewBox="0 0 17 18"
+              class="btn-add-cart "><svg width="17" style="vertical-align: sub;margin-left: 15px;" height="18" viewBox="0 0 17 18"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M15.9187 9.83092L15.9187 8.16922L9.33085 8.16922L9.33085 1.58134H7.66915L7.66915 8.16922L1.08127 8.16922L1.08127 9.83092L7.66915 9.83092L7.66915 16.4188H9.33085L9.33085 9.83092L15.9187 9.83092Z"
