--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -2,8 +2,10 @@
 <div class="main-slider" id="home">
     <div class="container">
       <div class="row">
-        <!-- <div class="col-md-3 col-sm-3 col-xs-12 banner-left hidden-xs"><img src="./../assets/images/banner-left.jpg" alt="banner"></div> -->
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 jtv-slideshow">
+        <div class="col-md-3 col-sm-3 col-xs-3 banner-left hidden-xs">
+          <img src="./../assets/images/banner-left.jpg" alt="banner">
+        </div>
+        <div class="col-sm-9 col-md-9 col-lg-9 col-xs-9 jtv-slideshow">
           <div id="jtv-slideshow">
             <div id='rev_slider_4_wrapper' class='rev_slider_wrapper fullwidthbanner-container' >
               <div id='rev_slider_4' class='rev_slider fullwidthabanner'>
