--- a/src/app/build-pc/build-pc.component.html
+++ b/src/app/build-pc/build-pc.component.html
@@ -12,7 +12,13 @@
   <div class="block__header home-tab">
     <h2 class="block__header__title">LỰA CHỌN CẤU HÌNH</h2>
   </div>
-  <button (click)="showChooseProduct(1)">Xây dựng lại</button>
+   
+    <div class="add-cart-buttons">
+      <button type="button"  routerLinkActive="router-link-active"
+        class="refresh-build"> <i class="fa fa-refresh" style="margin-left: 15px;"></i>  Xây dựng lại
+      </button>
+    </div>
+
 
   <div class="product-tabs-content-inner clearfix">
     <!-- Load thông số -->
