--- a/src/app/build-pc/build-pc.component.css
+++ b/src/app/build-pc/build-pc.component.css
@@ -260,3 +260,18 @@
 .add-cart-buttons .btn-add-cart-2:hover svg path {
     stroke: #fa9f2c
 }
+
+
+.refresh-build{
+    width: 20%;
+    height: 32px;
+    background: #197bb7;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+    margin-left: 10px;
+    text-align: left;
+    margin-bottom: 15px;
+    /* text-transform: uppercase */
+}
