update css home, quickview

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
                       <div class="pr-button-info-area">
                         <div class="add-to-wish" style="margin-bottom: 14px;" (click)="addToFavorite(item)"> <a> <i
                               class="fa fa-heart-o"></i> </a> </div>
-                        <div class="view-quick-view" (click)="openModalQuickView(item)"> <a> <i
+                        <div class="view-quick-view" style="cursor: pointer;" (click)="openModalQuickView(item)"> <a> <i
                               class="fa fa-search"></i> </a>
                         </div>
                       </div>
