--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -235,18 +235,18 @@
                 </li>               
               </ul>
             </li>
-
-            <li class="mt-root item-fb" href="https://www.facebook.com/dangminhpc70">
-              <div class="mt-root-item" >
+            <li></li>
+            <li></li>
+            <li style="border-radius: 50px;" class="mt-root item-fb" href="https://www.facebook.com/dangminhpc70">
+              <div style="padding: auto 0px;" class="mt-root-item" >
                 <a class="social" title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a>
               </div>
             </li>
-            <li class="mt-root  item-shoppe" href="https://www.facebook.com/dangminhpc70">
-              <div class="mt-root-item item-root-shoppe" >
+            <li style="border-radius: 50px;"  class="mt-root  item-shoppe" href="https://www.facebook.com/dangminhpc70">
+              <div  style="padding: 0px 0px;" class="mt-root-item item-root-shoppe" >
                 <a title="Connect us on Shopee" target="_blank" href="https://shopee.vn/shop/1023848407/"><img src="../assets/images/shopee-xanh.png" alt=""></a>
               </div>
             </li>
-            <li></li>
           </ul>
         </div>
       </div>
