--- a/src/assets/css/product-slider.css
+++ b/src/assets/css/product-slider.css
@@ -160,6 +160,7 @@
 .product .product__thumb .add-to-wish > a> i,
 .product .product__thumb .view-quick-view >a >i{
     font-size: large;
+    cursor: pointer;
 }
 
 .product .product__thumb .view-quick-view {
